# triton-rs

./: .gitignore  ARCHITECTURE.md  BENCH_RESULTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/triton-core/: Cargo.toml
crates/triton-core/examples/: ferrum_integration_demo.rs
crates/triton-core/src/: lib.rs
crates/triton-dsl/: Cargo.toml
crates/triton-dsl/examples/: awq_gemm_int4_typed.rs  dump_bitwise.rs  dump_early_return.rs  dump_hello.rs  dump_reduce_dsl.rs  dump_sum_squares.rs  dump_vec_add.rs  dump_vec_add_generic.rs  dump_vec_add_op.rs  ferrum_add_bias.rs  ferrum_dequant_int4.rs  ferrum_dequant_int4_sym.rs  ferrum_fused_add_rms_norm.rs  ferrum_fused_moe_w4a16.rs  ferrum_fused_silu_mul.rs  ferrum_gelu.rs  ferrum_layer_norm.rs  ferrum_residual_add.rs  ferrum_residual_add_inplace.rs  ferrum_rms_norm.rs  ferrum_softmax.rs  matmul_bf16.rs  matmul_f16.rs  matmul_f32.rs  unified_attention_f32.rs  w4a16_gptq_gemm_typed.rs
crates/triton-dsl/src/: codegen.rs  lib.rs
crates/triton-dsl/tests/: proc_macro_awq_gemm.rs  proc_macro_body.rs  proc_macro_casts.rs  proc_macro_const_generics.rs  proc_macro_dtype_generic.rs  proc_macro_ferrum_typed.rs  proc_macro_lit_promote.rs  proc_macro_matmul.rs  proc_macro_operators.rs  proc_macro_reduce.rs  proc_macro_scf_for.rs  proc_macro_scf_if.rs  proc_macro_signature.rs  proc_macro_vec_add.rs
crates/triton-ir/: Cargo.toml
crates/triton-ir/examples/: dump_matmul_one_block.rs  dump_reduce.rs  dump_sum_loop.rs  dump_vector_add.rs
crates/triton-ir/src/: attr.rs  lib.rs  module.rs  op.rs  ops.rs  printer.rs  ty.rs  value.rs
crates/triton-ir/src/dialect/: arith.rs  mod.rs  scf.rs  tt.rs
crates/triton-ir/tests/: reduce.rs  scf_if.rs  scf_loop.rs  tt_extended.rs  vector_add.rs
crates/triton-kernels/: Cargo.toml
crates/triton-kernels/examples/: dump_all.rs  dump_decode_attn_64.rs
crates/triton-kernels/src/: attention.rs  cache.rs  elementwise.rs  embedding.rs  lib.rs  norms.rs  positional.rs  projection.rs  reduction.rs
crates/triton-kernels/tests/: attention.rs  cache.rs  elementwise.rs  embedding.rs  norms.rs  positional.rs  projection.rs  reduction.rs
crates/triton-runtime/: Cargo.toml
crates/triton-runtime/examples/: bench_residual_add.rs  bench_rms_norm.rs  bench_silu_mul.rs  run_add_bias.rs  run_fused_add_rms_norm.rs  run_gelu.rs  run_layer_norm.rs  run_residual_add_inplace.rs  run_rms_norm.rs  run_softmax.rs  run_vec_add.rs
crates/triton-runtime/src/: lib.rs
crates/triton-sys/: Cargo.toml  SPIKE.md  build.rs
crates/triton-sys/examples/: compile_mlir.rs
crates/triton-sys/shim/: triton_c.cpp  triton_c.h
crates/triton-sys/src/: lib.rs
crates/triton-sys/tools/: fetch_vendor.sh
tools/: README.md  compile_cu.sh  compile_python_kernel.py  hello_kernel.mlir  matmul_one_block.mlir  mlir_to_cubin.py  reduce.mlir  reduce_dsl.mlir  run_bench.sh  run_bench_rms_norm.sh  run_bench_silu_mul.sh  run_e2e.sh  sum_loop.mlir  sum_squares.mlir  validate_mlir.py  vec_add_dsl.mlir  vec_add_generic.mlir  vec_add_op.mlir  vector_add.mlir  vector_add.roundtrip.mlir
tools/python_kernels/: fused_silu_mul.py  residual_add.py  rms_norm.py
tools/reference_cu/: common.cuh  fused_silu_mul.cu  residual_add.cu  rms_norm.cu
