[workspace]
resolver = "2"
members = [
    "crates/triton-sys",
    "crates/triton-runtime",
    "crates/triton-ir",
    "crates/triton-dsl",
    "crates/triton-core",
    "crates/triton-kernels",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["triton-rs contributors"]
license = "Apache-2.0"
repository = "https://github.com/sizzlecar/triton-rs"
homepage = "https://github.com/sizzlecar/triton-rs"
description = "Rust-native GPU DSL on top of the Triton MLIR backend"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# proc-macro
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# FFI / build
bindgen = "0.70"
cc = "1.0"
cmake = "0.1"

# CUDA runtime — `dynamic-linking` so `cargo check --features cuda` works
# on Mac (no CUDA at build time). At runtime, libcuda.so is dlopened on
# the GPU host; on hosts without CUDA, the dlopen fails with a clear
# error. Phase 1 may switch to `cuda-version-from-build-system` for
# release builds where static link is preferred.
cudarc = { version = "0.13", default-features = false, features = ["std", "cuda-version-from-build-system", "driver"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
triton-sys     = { path = "crates/triton-sys",     version = "0.1.0" }
triton-runtime = { path = "crates/triton-runtime", version = "0.1.0" }
triton-ir      = { path = "crates/triton-ir",      version = "0.1.0" }
triton-dsl     = { path = "crates/triton-dsl",     version = "0.1.0" }
triton-core    = { path = "crates/triton-core",    version = "0.1.0" }
triton-kernels = { path = "crates/triton-kernels", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
