[workspace]
resolver = "2"
members = [
    "crates/triton-sys",
    "crates/triton-runtime",
    "crates/triton-ir",
    "crates/triton-dsl",
    "crates/triton-core",
    "crates/triton-kernels",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["triton-rs contributors"]
license = "Apache-2.0"
repository = "https://github.com/sizzlecar/triton-rs"
homepage = "https://github.com/sizzlecar/triton-rs"
description = "Rust-native GPU DSL on top of the Triton MLIR backend"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# proc-macro
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# FFI / build
bindgen = "0.70"
cc = "1.0"
cmake = "0.1"

# CUDA runtime — bumped from 0.13 to 0.19 because 0.13.9 panics with
# `Unsupported cuda toolkit version: 13.1` on CUDA 13 hosts.
#
# Feature picks (default-features off because the 0.19 default pulls in
# cublas/curand/runtime which we don't need for kernel launch):
#   `std`                          — pulls in std::error::Error impl on DriverError
#                                    (needed so `?` works against Box<dyn Error>).
#   `driver`                       — safe wrappers (CudaContext / Stream / launch_builder).
#   `nvrtc`                        — exposes `cudarc::nvrtc::Ptx` (the type we use to
#                                    pass PTX text into CudaContext::load_module).
#   `dynamic-loading`              — dlopen libcuda at runtime, no link-time CUDA needed
#                                    (so `cargo check --features cuda` works on Mac).
#   `cuda-version-from-build-system` + `fallback-latest`
#                                  — pick toolkit version via nvcc at build, fall back
#                                    to the newest supported CUDA when nvcc is absent
#                                    (Mac CI). Required to expose CUDA 13 APIs.
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-version-from-build-system", "fallback-latest"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
triton-sys     = { path = "crates/triton-sys",     version = "0.1.0" }
triton-runtime = { path = "crates/triton-runtime", version = "0.1.0" }
triton-ir      = { path = "crates/triton-ir",      version = "0.1.0" }
triton-dsl     = { path = "crates/triton-dsl",     version = "0.1.0" }
triton-core    = { path = "crates/triton-core",    version = "0.1.0" }
triton-kernels = { path = "crates/triton-kernels", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
