[package]
name = "triton-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "proc-macro frontend: #[triton_kernel] turns Rust into Triton MLIR"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
# Tests for the proc-macro need triton-ir's real `Module`/`Type`/etc. to
# evaluate the generated code at runtime. Only a dev-dep — users of
# triton-dsl bring their own triton-ir via triton-core or directly.
triton-ir.workspace = true
